--- a/student-manager/pom.xml
+++ b/student-manager/pom.xml
@@ -18,6 +18,11 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+        <!-- spring security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <!-- spring data jpa -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
