添加Spring Session依赖，实现Redis存储Session

--- a/student-manager/src/main/resources/application.yml
+++ b/student-manager/src/main/resources/application.yml
@@ -8,3 +8,7 @@ spring:
     show-sql: true
   main:
     allow-circular-references: true
+  redis:
+    host: 192.168.30.150
+  session:
+    store-type: redis
